@@ -65,6 +65,9 @@ and regular expression pattern objects.
 .. versionchanged:: 2.4
    Added support for files, sockets, arrays, and patterns.
 
+.. versionchanged:: 2.7
+   Added support for thread.lock and threading.Lock.
+
 Several built-in types such as :class:`list` and :class:`dict` do not directly
 support weak references but can add support through subclassing::
 
